--- a/view/popup_select_movie_time.ejs
+++ b/view/popup_select_movie_time.ejs
@@ -72,8 +72,7 @@
         });
     });
 
-    timeSelectionBtn.addEventListener("click", () => {
-
-        window.location.href = "/select_headcount";
-    });
+    // timeSelectionBtn.addEventListener("click", () => {
+    //     window.location.href = "/select_headcount";
+    // });
 </script>
