--- a/view/html/select_movie_time_popup.html
+++ b/view/html/select_movie_time_popup.html
@@ -109,10 +109,11 @@
         }
 
         /* 확인 버튼 스타일 */
-        
-        .popupContent{
+
+        .popupContent {
             position: relative;
         }
+
         .timeSelectionBtn {
             position: absolute;
             right: 5%;
@@ -129,7 +130,6 @@
             font-weight: bold;
             cursor: pointer;
             transition: background-color 0.2s, box-shadow 0.2s;
-            display: none;
         }
 
         .timeSelectionBtn:hover {
@@ -140,6 +140,16 @@
         .timeSelectionBtn:active {
             background-color: #b41c2b;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        .disalbledBtn {
+            background-color: #3b3b3b;
+            color: #9d9d9d;
+            pointer-events: none;
+        }
+
+        p {
+            pointer-events: none;
         }
     </style>
 </head>
@@ -172,47 +182,54 @@
                             <div class="posterImg"></div>
                             <ul class="allMvTime" id="allMvTime">
                                 <!-- 1 -->
-                                <li class="mvTimeList">
+                                <li class="mvTimeList" id="list01">
                                     <p class="theather">A관</p>
-                                    <p class="startAndEndTime">09시00분<br>~12시00분</p>
+                                    <p class="startAndEndTime">11시00분</p>
+                                    <p class="startAndEndTime">~12시00분</p>
                                 </li>
                                 <!-- 2 -->
-                                <li class="mvTimeList">
+                                <li class="mvTimeList" id="list02">
                                     <p class="theather">A관</p>
-                                    <p class="startAndEndTime">09시00분<br>~12시00분</p>
+                                    <p class="startAndEndTime">12시00분</p>
+                                    <p class="startAndEndTime">~13시00분</p>
                                 </li>
                                 <!-- 3 -->
-                                <li class="mvTimeList">
+                                <li class="mvTimeList" id="list03">
                                     <p class="theather">A관</p>
-                                    <p class="startAndEndTime">09시00분<br>~12시00분</p>
+                                    <p class="startAndEndTime">13시00분</p>
+                                    <p class="startAndEndTime">~14시00분</p>
                                 </li>
                                 <!-- 4 -->
-                                <li class="mvTimeList">
+                                <li class="mvTimeList" id="list04">
                                     <p class="theather">A관</p>
-                                    <p class="startAndEndTime">09시00분<br>~12시00분</p>
+                                    <p class="startAndEndTime">14시00분</p>
+                                    <p class="startAndEndTime">~15시00분</p>
                                 </li>
                                 <!-- 5 -->
-                                <li class="mvTimeList">
+                                <li class="mvTimeList" id="list05">
                                     <p class="theather">A관</p>
-                                    <p class="startAndEndTime">09시00분<br>~12시00분</p>
+                                    <p class="startAndEndTime">15시00분</p>
+                                    <p class="startAndEndTime">~16시00분</p>
                                 </li>
                                 <!-- 6 -->
-                                <li class="mvTimeList">
+                                <li class="mvTimeList" id="list06">
                                     <p class="theather">A관</p>
-                                    <p class="startAndEndTime">09시00분<br>~12시00분</p>
+                                    <p class="startAndEndTime">16시00분</p>
+                                    <p class="startAndEndTime">~17시00분</p>
                                 </li>
                                 <!-- 7 -->
-                                <li class="mvTimeList">
+                                <li class="mvTimeList" id="list07">
                                     <p class="theather">A관</p>
-                                    <p class="startAndEndTime">09시00분<br>~12시00분</p>
+                                    <p class="startAndEndTime">17시00분</p>
+                                    <p class="startAndEndTime">~18시00분</p>
                                 </li>
                             </ul>
                         </div>
                         <div class="posterInformation">
                             <p id="mvName" class="mvName">영화명</p>
-                            <p id="mvTime" class="mvTime">시간</p>
+                            <p id="mvTime" class="mvTime"></p>
                         </div>
-                        <button id="timeSelectionCompleteBtn" class="timeSelectionBtn">선택 완료</button>
+                        <button id="timeSelectionCompleteBtn" class="timeSelectionBtn disalbledBtn">선택 완료</button>
                 </section>
             </section>
         </section>
@@ -228,55 +245,52 @@
                     class="timeDisplay">12:00</span>
             </article>
         </section>
-
     </div>
     <!-- ==script== -->
     <script>
-        /*
-        // DH
+        const mvTimeList = document.querySelectorAll(".mvTimeList");
+        const timeSelectionBtn = document.getElementById("timeSelectionCompleteBtn");
+        const mvTime = document.getElementById("mvTime");
+
         function objectToQueryString(obj) {
             return Object.keys(obj)
-                .map(key => { return `${key}=${obj[key]}` })
+                .map(key => { return `${key}=${obj[key]}`})
                 .join('&');
         }
 
         const movieData = {
             name: "",
-            movieDuration: "", //상영시간
             theater: "",
-            startAndEndTime: ""
+            startTime: "", //시작시간
+            endTime: "" //끝시간
         }
 
         movieData.name = document.getElementById("mvName").innerHTML;
-        movieData.movieDuration = document.getElementById("mvTime").innerHTML;
 
-        document.getElementById("allMvTime").addEventListener("click", (event) => {
-            if (event.target && event.target.closest("li")) {
-                const paragraphs = event.target.closest("li").getElementsByTagName("p");
-                movieData.theater = paragraphs[0].innerHTML;
-                movieData.startAndEndTime = paragraphs[1].innerHTML;
-                console.log(movieData);
-                const query = objectToQueryString(movieData);
-                location.href = `/select_headcount_popup?${query}`;
-            }
-        });
-        */
-        // YJ
-        const mvTimeList = document.querySelectorAll(".mvTimeList");
-        const timeSelectionBtn = document.getElementById("timeSelectionCompleteBtn");
         mvTimeList.forEach((item) => {
+            // click event : 클릭된 item -> movieData 값 할당 //
             item.addEventListener("click", (event) => {
+                const paragraphs = event.target.getElementsByTagName("p");
+                movieData.theater = paragraphs[0].innerHTML;
+                movieData.startTime = paragraphs[1].innerHTML;
+                movieData.endTime = paragraphs[2].innerHTML.slice(1);
+                mvTime.innerHTML = movieData.startTime;
+                console.log(movieData);
+
+                // 라디오 버튼 처럼 기능 구현 //
                 mvTimeList.forEach((listItem) => {
                     listItem.classList.remove("activeMvTime");
                 });
                 item.classList.add("activeMvTime");
-                timeSelectionBtn.style.display="block";
+                timeSelectionBtn.classList.remove("disalbledBtn");
             });
         });
 
-        timeSelectionBtn.addEventListener("click",()=>{
-           window.location.href = "/select_headcount";
-        })
+        // 클릭시 query+페이지 이동 //
+        timeSelectionBtn.addEventListener("click", (event) => {
+            const query = objectToQueryString(movieData);
+            location.href = `/select_headcount_popup?${query}`;
+        });
 
     </script>
 </body>
