--- a/view/html/movie_time_selection.html
+++ b/view/html/movie_time_selection.html
@@ -170,7 +170,7 @@
       <section class="mainPosterContainer">
         <!-- #영화별선택# -->
         <article id="posterGallery" class="posterGallery">
-          <div class="posterItem">포스터영역</div>
+          <div class="posterItem">베테랑</div>
           <div class="posterItem">포스터영역</div>
           <div class="posterItem">포스터영역</div>
           <div class="posterItem">포스터영역</div>
