--- a/view/html/select_headcount_popup.html
+++ b/view/html/select_headcount_popup.html
@@ -25,7 +25,7 @@
             background-color: #3D3F4D;
             position: relative;
             margin-bottom: 5rem;
-            top: 15%;
+            top: 7.5%;
             color: #ffffff;
             left: 17.5%;
         }
@@ -35,7 +35,7 @@
             height: 4rem;
             width: 11rem;
             font-size: 1.6rem;
-            margin-top: 10rem;
+            margin-top: 3.5rem;
             background-color: #DE1E2D;
             color: #ffffff;
             border: none;
@@ -113,6 +113,55 @@
             background-color: #DE1E2D;
             color: white;
         }
+
+        .headcountSelection {
+            /* border: 1px solid red; */
+            width: 65%;
+            text-align: center;
+            color: #fff;
+            padding-top: 4rem;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .headcountTitle {
+            font-size: 1.4rem;
+            padding: 0.5rem;
+            letter-spacing: 0.03rem;
+        }
+
+        .infoIcon{
+            color: #dbdbdb;
+            font-size: 1.7rem;
+            padding: 0;
+        }
+
+        .headcountCurrent {
+            width: 2.7rem;
+            height: 2.5rem;
+            line-height: 2.5rem;
+            color: #000;
+            border-radius: 0.3rem;
+            text-align: center;
+            background: #bfbfbf;
+            border: none;
+            outline: none;
+            font-weight: 750;
+        }
+        .valueFalse{
+            background: #DE1E2D;
+            color: #fff;
+            font-weight: 600;
+
+        }
+        /* Chrome, Safari, Edge, Opera */
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
     </style>
 </head>
 
@@ -136,6 +185,12 @@
                 </article>
                 <section id="popupContent" class="popupContent">
                     <!-- ~여기에 작성~ -->
+                    <article class="headcountSelection">
+                        <h2 class="headcountTitle"><span class="infoIcon headcountTitle">※</span> 인원 선택은 최대 8명까지 가능합니다.</h2>
+                        <span class="headcountTitle">현재 선택된 인원 수: <input type="number"
+                                id="headcountCurrent" class="headcountTitle headcountCurrent" value="0" readonly> 명</span>
+
+                    </article>
                     <div class="adult selectPeople">
                         <div class="number-selection">
                             <div class="ticketTitle">성인</div>
@@ -255,6 +310,7 @@
         <!-- ==script== -->
         <script>
             const selectPeopleBtn = document.getElementById("selectPeopleBtn");
+            const headcountCurrent = document.getElementById("headcountCurrent");
 
             // JSON으로 빠져야하는 객체
             const movieData = {
@@ -277,22 +333,27 @@
                         if (checkboxes.length > 0) {
                             switch (event.target.name) {
                                 case "adult":
-                                    movieData.adult = event.target.value;
+                                    movieData.adult = Number(event.target.value);
                                     break;
                                 case "youth":
-                                    movieData.youth = event.target.value;
+                                    movieData.youth = Number(event.target.value);
                                     break;
                                 case "special":
-                                    movieData.special = event.target.value;
+                                    movieData.special = Number(event.target.value);
                             }
                         } else {
                             movieData[key] = 0;
                         }
-                        if ((movieData.adult + movieData.youth + movieData.special) == 0) {
+                        const headCountValue = Number(movieData.adult + movieData.youth + movieData.special);
+                        if (headCountValue == 0 || headCountValue > 8) {
                             selectPeopleBtn.classList.add("disalbledBtn");
+                            headcountCurrent.classList.add("valueFalse");
                         } else {
                             selectPeopleBtn.classList.remove("disalbledBtn");
+                            headcountCurrent.classList.remove("valueFalse");
                         }
+                        headcountCurrent.value = headCountValue;
+                        
                         console.log(movieData)
                     });
                 });
@@ -323,11 +384,6 @@
             selectPeopleBtn.addEventListener("click", () => {
                 window.location.href = "/select_seat";
             });
-
-
-
-
-
 
         </script>
     </div>
